# libpam-ssh

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  atomicio.c  atomicio.h  authfd.c  authfd.h  authfile.c  authfile.h  bootstrap.sh  bufaux.c  bufaux.h  buffer.c  buffer.h  cipher-3des1.c  cipher-bf1.c  cipher-ctr.c  cipher.c  cipher.h  config.h.in  configure  configure.ac  getput.h  kex.h  key.c  key.h  log.c  log.h  openpam_borrow_cred.c  openpam_cred.h  openpam_restore_cred.c  pam.conf.example  pam_get_pass.c  (+17 more)
debian/: NEWS.Debian  README.Debian  changelog  control  copyright  docs  libpam-ssh.install  libpam-ssh.lintian-overrides  libpam-ssh.manpages  pam_ssh.8  postinst  prerm  repack  rules  watch
debian/patches/: EOF-password.patch  adapt-embedded_code-openssh.patch  add-ecdsa-support.patch  debianization.patch  describe-allow-blank-passphrase.diff  disambiguate-embedded_code-openssh.patch  double-free.patch  fix-EOF-password.patch  fix-debian-adhoc.patch  fix-return-PAM_SESSION_ERR.patch  fix-try-first-password.diff  fix-try-first-password.patch  fix-upstream-autotools.patch  fix-use-pam_ssh_log.patch  handle-no-controlling-tty.diff  handle-no-controlling-tty.patch  include-syslog.patch  reduce-debug-logging.diff  return-PAM_SESSION_ERR.diff  series  setgid.patch  sigmask.patch  ssh-agent-setgid_and_sigmask.patch  ssh-agent-tmpdir.patch  start-ssh-agent.patch  update-embedded_code-openssh.patch  update-pam_ssh-manpage.patch  update-pam_ssh.patch
